hphp/test/slow/ext_array/range-mem-limit.php.expectf

Fatal error: request has exceeded memory limit in %s on line 7
